--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>これはビデオです</h1>
-<video id="video" autoplay></video>
+<video id="video" autoplay playsinline></video>
 <script>
 var video = document.getElementById('video');
 
