--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ var video = document.getElementById('video');
 navigator.mediaDevices.getUserMedia({
     audio: false,
     video: true,
+    facingMode: {
+        exact: 'environment',
+    },
 })
 .then(function (stream) {
     video.srcObject = stream;
