--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 <ul>
     <li>
-        <a href="camera/front.html">フロントカメラ</a>
+        <a href="/camerawebapi/camera/front.html">フロントカメラ</a>
     </li>
     <li>
-        <a href="camera/rear.html">リアカメラ</a>
+        <a href="/camerawebapi/camera/rear.html">リアカメラ</a>
     </li>
 </ul>
 </body>
