--- a/camera/front.html
+++ b/camera/front.html
@@ -7,7 +7,7 @@
 <body>
 <h1>フロントカメラ</h1>
 <video id="video" autoplay playsinline></video>
-<p><a href="/camera/rear.html">リアカメラを使う</a></p>
+<p><a href="/camerawebapi/camera/rear.html">リアカメラを使う</a></p>
 <script>
 var video = document.getElementById('video');
 
