--- a/camera/rear.html
+++ b/camera/rear.html
@@ -7,7 +7,7 @@
 <body>
 <h1>リアカメラ</h1>
 <video id="video" autoplay playsinline></video>
-<p><a href="/camera/front.html">フロントカメラを使う</a></p>
+<p><a href="/camerawebapi/camera/front.html">フロントカメラを使う</a></p>
 <script>
 var video = document.getElementById('video');
 
