--- a/camera/front.html
+++ b/camera/front.html
@@ -7,6 +7,10 @@
 <body>
 <h1>フロントカメラ</h1>
 <video id="video" autoplay playsinline></video>
+<div>
+    <h2>結果</h2>
+    <p id="result"></p>
+</div>
 <p><a href="/camerawebapi/camera/rear.html">リアカメラを使う</a></p>
 <div style="display:none">
     <canvas id="canvas"></canvas>
