--- a/camera/rear.html
+++ b/camera/rear.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<script src="https://raw.githubusercontent.com/cozmo/jsQR/master/dist/jsQR.js" type="text/javascript"></script>
 <title>リアカメラ</title>
 </head>
 <body>
@@ -15,7 +16,6 @@
 <div style="display:none">
     <canvas id="canvas"></canvas>
 </div>
-<script src="https://raw.githubusercontent.com/cozmo/jsQR/master/dist/jsQR.js"></script>
 <script>
 var video = document.getElementById('video');
 
