--- a/camera/front.html
+++ b/camera/front.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src="https://raw.githubusercontent.com/cozmo/jsQR/master/dist/jsQR.js" type="text/javascript"></script>
 <title>フロントカメラ</title>
 </head>
 <body>
@@ -16,6 +15,8 @@
 <div style="display:none">
     <canvas id="canvas"></canvas>
 </div>
+
+<script src="/camerawebapi/static/js/jsQR.js"></script>
 <script>
 var video = document.getElementById('video');
 
