--- a/camera/front.html
+++ b/camera/front.html
@@ -33,7 +33,7 @@ navigator.mediaDevices.getUserMedia({
     alert('カメラの起動に失敗しました。');
 });
 
-var canvas = document.getElementById('canvas');
+var canvas = document.querySelector('#canvas');
 var ctx = canvas.getContext('2d');
 
 var checkImage = () => {
