--- a/camera/rear.html
+++ b/camera/rear.html
@@ -19,20 +19,6 @@
 <script src="/camerawebapi/static/js/jsQR.js"></script>
 <script>
 var video = document.getElementById('video');
-
-navigator.mediaDevices.getUserMedia({
-    audio: false,
-    video: {
-        facingMode: 'user'
-    }
-})
-.then(function (stream) {
-    video.srcObject = stream;
-})
-.catch(function () {
-    alert('カメラの起動に失敗しました。');
-});
-
 var canvas = document.querySelector('#canvas');
 var ctx = canvas.getContext('2d');
 
@@ -51,6 +37,20 @@ var checkImage = () => {
         setTimeout(() => { checkImage() }, 200)
     }
 }
+
+navigator.mediaDevices.getUserMedia({
+    audio: false,
+    video: {
+        facingMode: 'user'
+    }
+})
+.then(function (stream) {
+    video.srcObject = stream;
+    checkImage();
+})
+.catch(function () {
+    alert('カメラの起動に失敗しました。');
+});
 </script>
 </body>
 </html>
