--- a/camera/rear.html
+++ b/camera/rear.html
@@ -23,7 +23,7 @@ var canvas = document.querySelector('#canvas');
 var ctx = canvas.getContext('2d');
 
 var checkImage = () => {
-    ctx.drawImage(vide, 0, 0, canvas.width, canvas.height);
+    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
     var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
 
@@ -48,8 +48,8 @@ navigator.mediaDevices.getUserMedia({
     video.srcObject = stream;
     checkImage();
 })
-.catch(function () {
-    alert('カメラの起動に失敗しました。');
+.catch(function (e) {
+    alert(e);
 });
 </script>
 </body>
